# d2-db

./: .gitignore  LICENSE  README.md  pyproject.toml
d2_db/: create_db.py  dependency.py
d2_db/dto/: __base__.py  __init__.py  bodylocs.py  colors.py  composit.py  events.py  playerclass.py  storepage.py
d2_db/mediation/: __init__.py  bodylocs.py  colors.py  composit.py  events.py  playerclass.py  storepage.py
d2_db/services/: __base__.py  __init__.py  bodylocs.py  colors.py  composit.py  events.py  playerclass.py  storepage.py
