[tool.poetry]
name = "d2_db"
version = "0.1.0"
description = "Create Diablo II database from data files"
authors = ["Yue Wu <wuyuejl97@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.21"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
